Test : Commit Template Test
- commit template를 설정하기 위해 test
- project 협업을 위해 test
close #4

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>resume_yangdaeun</title>
 </head>
 <body>
-  <div class="bg-blue-500">
+  <div class="bg-[#3D69AA]">
     <header class="grid grid-cols-3 grid-rows-2 text-white gap-10 px-10">
       <h1 class="row-span-2 text-8xl font-black m-auto text-right">YANG<br>DA<br>EUN</h1>
       <p class="col-span-2 font-light	mt-auto text-xl">늦바람이 무섭다 했던가요.<br>
@@ -23,7 +23,7 @@
         </div>
       </div>
       <ul class=" list-inside text-2xl text-left pb-10">
-        <li class="mb-1">🟡 010-3242-0141</li>
+        <li class="mb-1">🟡 010-3242</li>
         <li class="mb-1">🟡 daeun_71@naver.com</li>
         <li class="mb-1">🟡 https://github.com/dana-y</li>
         <li class="mb-1">🟡 Seongnam City, Gyeonggi Province</li>
